# scrabble

./: Cargo.toml  README.md  TODO  build.rs  dequote.py  run.sh  words.txt  words.txt.zst  words_permissive.txt  workon.sh
game/: Cargo.toml  words.txt
game-logic/: Cargo.toml
game-logic/src/: lib.rs  main.rs  std_impls.rs
game/src/: lib.rs  main.rs  solve.rs  std_impls.rs  tests.rs  types.rs
scripts/: digest.sh  run.sh  send.sh  workon.sh
server/: Cargo.toml
server/src/: main.rs
src/: encoding.rs  game.rs  main.rs
src/game/: solve.rs  std_impls.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  Board.scss  Board.tsx  DebugInfo.tsx  GameView.scss  GameView.tsx  SetupView.scss  SetupView.tsx  Tile.css  Tile.scss  Tile.tsx  TileBar.css  TileBar.scss  TileBar.tsx  client.ts  game-types.ts  game.ts  index.css  index.scss
web/src/gameview/: Board.scss  Board.tsx  Header.scss  Header.tsx  MoveHistory.scss  MoveHistory.tsx  Tile.scss  Tile.tsx  TileBar.tsx
