[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
axum = { version = "0.7.5", features = ["ws"] }
extend = "1.2.0"
anyhow = "1.0.86"
rand = "0.8.5"
itertools = "0.13.0"
forr = "0.2.3"
zstd = "0.13.1"
