[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
game = { path = "../game" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
axum = { version = "0.7.5", features = ["ws"] }
futures = "0.3.30"
rand = "0.8.5"
extend = "1.2.0"
thiserror = "1.0.61"
anyhow = "1.0.86"
